<resources>
    <string name="app_name">MyAlarm</string>
    <string name="stopwatch_string">00:00:00</string>
    <string name="start_button_string">START</string>
    <string name="stop_button_string">STOP</string>
    <string name="resume_button_string">RESUME</string>
    <string name="reset_button_string">RESET</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="okString">Ok</string>
    <string name="show_timer_button_string">Show timer</string>
    <string name="done_string">done</string>
    <string name="alarm_name_string">Alarm Name</string>
    <string name="cancel_string">Cancel</string>
    <string name="save_string">Save</string>
    <string name="no_alarms_added_string">No Alarms Added</string>
</resources>
