<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/alarm_editor_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/editor_timepicker_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TimePicker
            android:id="@+id/editor_timepicker"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:timePickerMode="spinner" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editor_date_container"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/sunTV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="SU"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:background="@drawable/circle"
            android:clickable="true"/>

        <TextView
            android:id="@+id/monTV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="M"
            android:textSize="25sp"
            android:clickable="true"
            android:textIsSelectable="true"/>

        <TextView
            android:id="@+id/tueTV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="T"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:clickable="true"/>

        <TextView
            android:id="@+id/wedTV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="W"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:background="@drawable/circle"
            android:clickable="true"/>

        <TextView
            android:id="@+id/thursTV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="TH"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:background="@drawable/circle"
            android:clickable="true"/>

        <TextView
            android:id="@+id/friTV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="F"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:background="@drawable/circle"
            android:clickable="true"/>

        <TextView
            android:id="@+id/satTV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="SA"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:background="@drawable/circle"
            android:clickable="true"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/editor_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/editor_date_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/alarm_name_string"
                android:textSize="25sp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/alarm_editor_nameET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/editor_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/cancel_string"/>

        <Button
            android:id="@+id/editor_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/button_shape"
            android:text="@string/save_string"/>

    </LinearLayout>

</LinearLayout>